--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.13.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
